# panacea-icono

./: .gitignore  .pre-commit-config.yaml  AUDIT_README.md  BRANCH_EVALUATION_REPORT.md  BRANDING_GUIDE.md  CODESPACE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_WORKFLOWS.md  Dockerfile  ECOSYSTEM.md  ECOSYSTEM_TRACKING.md  FINAL_EVALUATION_SUMMARY.md  Makefile  PLAN_INTEGRACION_ECOSISTEMA_PANACEA.md  PLAN_SINCRONIZACION_ECOSISTEMA_COMPLETO.md  README.md  README_enhanced.md  RELEASE_NOTES_v2025.09.09.0302.md  RELEASE_NOTES_v2025.09.09.0321.md  RESUMEN_COORDINACION_COMPLETA.md  RESUMEN_FINAL_ECOSISTEMA_COMPLETO.md  RESUMEN_INTEGRACION_COMPLETA.md  RESUMEN_MIGRACION_DOCUMENTACION_COMPLETA.md  RESUMEN_SINCRONIZACION_ECOSISTEMA_COMPLETO.md  SECURITY.md  WEBHOOKS_README.md  app.json  audit.py  audit_report.json  auto_update_repos.py  branch-manager.sh  branch_corrections.sh  cleanup_branches.sh  coordinate_ecosystem.sh  demo_deployment_features.py  docker-compose.yml  ecosystem_cli.sh  ecosystem_config.json.template  ecosystem_data.json  (+29 more)
.devcontainer/: devcontainer.json  setup-ecosystem.sh
.github/: GOVERNANCE.md  IMPLEMENTATION.md  branch-protection-rules.md  connection-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml  coordinate_ecosystem.yml  ecosystem-update.yml  rules-enforcement.yml  wp_deploy.yml
ai/: huggingface_medical_ai.py  panacea_ai_ecosystem.py  panacea_gpt_system.py
bots/: telegram_bots_manager.py
docs/: README.md
docs/ai/: README.md
docs/apis/: README.md
docs/auditorias/: docker_audit_report.md  github_audit_report.md  heroku_audit_report.md  huggingface_audit_report.md  telegram_audit_report.md  vercel_audit_report.md
docs/deployment/: README.md
docs/ecosystem/: README.md
docs/governance/: README.md
docs/organization/: README.md
docs/roadmap/: README.md
docs/tokenomics/: README.md
docs/whitepaper/: README.md
integrations/: github_integration.py  heroku_integration.py
modules/: panacea_connector.py
public/: index.html
public/assets/: brand-colors.css
scripts/: README.md  wp_backup.sh  wp_deploy_sftp.sh
wp-content/mu-plugins/: panacea-api.php
